--- a/EFDemo/EFDemo.csproj
+++ b/EFDemo/EFDemo.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201808032209412_AddPostClass.Designer.cs">
       <DependentUpon>201808032209412_AddPostClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808050026556_AddPostAbstract.cs" />
+    <Compile Include="Migrations\201808050026556_AddPostAbstract.Designer.cs">
+      <DependentUpon>201808050026556_AddPostAbstract.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BlogDbContext.cs" />
     <Compile Include="Models\Blog.cs" />
@@ -84,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808032209412_AddPostClass.resx">
       <DependentUpon>201808032209412_AddPostClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808050026556_AddPostAbstract.resx">
+      <DependentUpon>201808050026556_AddPostAbstract.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
