Add update db to lasted version

--- a/EFDemo/App.config
+++ b/EFDemo/App.config
@@ -13,4 +13,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings><add name="BlogDemoEntities" connectionString="metadata=res://*/NewFolder1.BlogDb.csdl|res://*/NewFolder1.BlogDb.ssdl|res://*/NewFolder1.BlogDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BlogDemo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
